
    in your code.

    This limitation will be overcomed in a future release of this project.

  * "open()" methods allow path-like objects.
  * "DBEnv.open()" accepts keyword arguments.
  * "DBEnv.open()" allows no homedir and a homedir of "None".
  * "DB.set_re_source()" uses local filename encoding.
  * "DB.set_re_source()" accepts path-like objects if using Python 3.6 or up.
  * "DB.get_re_source()" returns unicode objects with the local
    filename encoding.
  * "DB_ENV.set_lg_dir()" uses local filename encoding.
  * "DB_ENV.set_lg_dir()" accepts path-like objects if using Python 3.6 or up.
  * "DB_ENV.get_lg_dir()" returns unicode objects with the local
    filename encoding.
  * "DB_ENV.set_tmp_dir()" uses local filename encoding.
  * "DB_ENV.set_tmp_dir()" accepts path-like objects if using Python 3.6 or up.
  * "DB_ENV.get_tmp_dir()" returns unicode objects with the local
    filename encoding.
  * "DB_ENV.set_data_dir()" uses local filename encoding.
  * "DB_ENV.set_data_dir()" accepts path-like objects if using Python 3.6 or
    up.
  * "DB_ENV.get_data_dirs()" returns a tuple of unicode objects encoded with
    the local filename encoding.
  * "DB_ENV.log_prinf()" requires a bytes object not containing '\0'.
  * The "DB_ENV.lock_get()" name can not be None.
  * "DB_ENV.set_re_pad()" param must be bytes or integer.
  * "DB_ENV.get_re_pad()" returns bytes.
  * "DB_ENV.set_re_delim()" param must be bytes or integer.
  * "DB_ENV.get_re_delim()" returns bytes.

6.2.7:
  * Update copyright notices.
  * https links.
  * Fix Python 3 deprecation warning.
    Notified by Arthur Gautier.
  * Fix compilation Python 3.8 deprecation warnings.
  * Fix compilation Python 3.9 deprecation warnings.
  * Python 3.8 and 3.9 are explicitly supported.

6.2.6:
  * Correctly detect Berkeley DB when installed via Homebrew on Mac OS X.
    Patch by Matthew Peveler.
  * Python 3.6 and 3.7 are explicitly supported.

6.2.5: