@@ -47,6 +47,8 @@ TODO: Implement PEP 384 (Stable API)
   * "DBEnv.open()" allows no homedir and a homedir of "None".
   * "DB.set_re_source()" uses local filename encoding.
   * "DB.set_re_source()" accepts path-like objects if using Python 3.6 or up.
+  * "DB.verify()" accepts path-like objects for "filename" and "outfile" if
+    using Python 3.6 or up.
   * "DB.get_re_source()" returns unicode objects with the local
     filename encoding.
   * "DB_ENV.set_lg_dir()" uses local filename encoding.
